<resources>
    <string name="app_name">WeFix Technician</string>

    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="complete_call_and_generate_bill">Complete Call And Generate Bill</string>
    <string name="log_details">Log Details</string>
    <string name="name">Name</string>
    <string name="email_id">Email ID</string>
    <string name="phone_nnumber">Phone\nNumber</string>
    <string name="date">Date</string>
    <string name="work_type">Work Type</string>
    <string name="company">Company</string>
    <string name="amount">Amount</string>
    <string name="problem_ndescription">Problem\ndescription</string>
    <string name="status">Status</string>
    <string name="send_notification_to_customer">Send Notification To Customer</string>
    <string name="title">Title</string>
    <string name="service">Service</string>
    <string name="installation">Installation</string>
    <string name="only_visit">Only Visit</string>
    <string name="continue_">Continue</string>
    <string name="extra_parts">Extra Parts</string>
    <string name="show_all_parts">Show All Parts</string>
    <string name="parts_detail">Parts Detail</string>
    <string name="add_parts">Add Parts</string>
    <string name="cancel">Cancel</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="image">Image</string>
    <string name="new_password">New Password</string>
    <string name="reenter_password">ReEnter Password</string>
    <string name="change">Change</string>
    <string name="we_fix_team">We Fix Team</string>
    <string name="tax_invoice">Tax Invoice</string>
    <string name="wefix">WeFix</string>
    <string name="aahan_commrcial_and_co">AAHAN COMMRCIAL AND CO.</string>
    <string name="gstin_uin_19abmfa5193k1zu">GSTIN/UIN: 19ABMFA5193K1ZU</string>
    <string name="contact_8509200714">Contact: 8509200714</string>
    <string name="email_wefix_aahan_gmail_com">Email: wefix.aahan@gmail.com</string>
    <string name="web_site_www_wefixservice_in">Web Site: www.wefixservice.in</string>
    <string name="west_bengal_19">West Bengal-19</string>
    <string name="customer_name">Customer Name</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="call_id_no">Call ID No.</string>
    <string name="invoice_no">Invoice No.</string>
    <string name="payment_type">Payment Type</string>
    <string name="pos">POS</string>
    <string name="description_of_nitem_parts">Description Of \nItem/ Parts</string>
    <string name="quantity">Quantity</string>
    <string name="rate">Rate</string>
    <string name="cgst_9">CGST: 9%</string>
    <string name="sgst_9">SGST: 9%</string>
    <string name="parts_amount">Parts Amount</string>
    <string name="total_amount">Total Amount</string>
    <string name="company_s_pan_abmfa5193k">Company\'s PAN: ABMFA5193K</string>
    <string name="aahan_commercial_and_co">AAHAN COMMERCIAL AND CO.</string>
    <string name="complete_log">Complete Log</string>
    <string name="no_data">No Data</string>
    <string name="welcome_to_nwefix_technician">Welcome To\nWeFix Technician</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="from">From</string>
    <string name="made_in_india">Made In India</string>
    <string name="full_call_log_details">Full Call Log Details</string>
    <string name="customer_details">Customer Details</string>
    <string name="pin_code">Pin Code</string>
    <string name="model_no">Model No</string>
    <string name="serial_no">Serial No</string>
    <string name="purchase_date">Purchase Date</string>
    <string name="problem">Problem</string>
    <string name="close_call_logs">Close Call Logs</string>
    <string name="open_call_logs">Open Call Logs</string>
    <string name="call_logs">Call Logs</string>
    <string name="warranty_logs">Warranty Logs</string>
    <string name="no_record">No Record</string>
    <string name="log_placed">Log Date</string>
    <string name="log_id">Log ID#</string>
    <string name="id">ID</string>
    <string name="delete">Delete</string>
    <string name="parts_name">Parts Name</string>
    <string name="entry_date_and_time">Entry Date And Time</string>
    <string name="loading">Loading…</string>
    <string name="update_remarks">Update Remarks</string>
    <string name="add_remarks">Add Remarks</string>
    <string name="update">Update</string>
    <string name="remarks">Remarks</string>
    <string name="close_date">Close Date</string>
    <string name="payment_details">Payment Details</string>
    <string name="total_logs">Total Logs</string>
    <string name="total_complete_pay_call_logs">Total Complete Pay Call Logs</string>
    <string name="paid_call_logs">Paid Call Logs</string>
    <string name="due_call_logs">Due Call Logs</string>
</resources>